ajouts de fichiers epub

--- a/char-rnn-generation.ipynb
+++ b/char-rnn-generation.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
     "all_characters = string.printable\n",
     "n_characters = len(all_characters)\n",
     "\n",
-    "file = unidecode.unidecode(open('../data/shakespeare.txt').read())\n",
+    "file = unidecode.unidecode(open('data/shakespeare.txt').read())\n",
     "file_len = len(file)\n",
     "print('file_len =', file_len)"
    ]
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -114,11 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " will continue that I broach'd in jest.\n",
-      "I can, Petruchio, help thee to a wife\n",
-      "With wealth enough and young and beauteous,\n",
-      "Brought up as best becomes a gentlewoman:\n",
-      "Her only fault, and that is faults en\n"
+      "ot? speak, man: what's thy name?\n\nCORIOLANUS:\nIf, Tullus,\nNot yet thou knowest me, and, seeing me, dost not\nThink me for the man I am, necessity\nCommands me name myself.\n\nAUFIDIUS:\nWhat is thy name?\n\nC\n"
      ]
     }
    ],
@@ -144,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -201,15 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variable containing:\n",
-      " 10\n",
-      " 11\n",
-      " 12\n",
-      " 39\n",
-      " 40\n",
-      " 41\n",
-      "[torch.LongTensor of size 6]\n",
-      "\n"
+      "Variable containing:\n 10\n 11\n 12\n 39\n 40\n 41\n[torch.LongTensor of size 6]\n\n"
      ]
     }
    ],
